<resources>
    <string name="app_name">ICall</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="doctor_menu">doctorMenu</string>
    <string name= "adminGreet">Hello Admin Welcome to the Menu</string>
    <string name="add_doctor">AddDoctor</string>
    <string name="view_doctor">ViewDoctor</string>
    <string name="title_activity_sms_manager">SmsManager</string>
    <string name="actions_logout">Log Out</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="invite_user">Invite User</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_display_dialog">DisplayDialog</string>
    <string name="group_name">group name</string>
    <string name="group_name1">Group Chat</string>
</resources>
